--- a/index.html
+++ b/index.html
@@ -1,363 +1,296 @@
 <html>
-  <head>
-    <title>burger.scss</title>
-    <link rel="stylesheet" href="css/burger.css">
-    <style>
-      .item {
-        background-color: CornflowerBlue;
-        border-radius: 2px;
-        display: block;
-        height: 2rem;
-        margin-bottom: 1rem;
-        width: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Burger.scss</h1>
-    </header>
+<head>
+  <title>burger.scss</title>
+  <link rel="stylesheet" href="css/burger.css">
+</head>
+<body class="docs">
+  <header>
+    <img src="images/burger-sm.png" alt="">
+    <nav>
+      <ul class="list-inline list-reset">
+        <li>github</li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="contain">
+    <div class="column-xs-12">
+
+      <div class="row">
+
+        <div class="column-xs-12">
+          <h2>Grid</h2>
+        </div>
+
+        <div class="column-xs-12">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-11">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-2">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-10">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-3">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-9">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-4">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-8">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-5">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-7">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-6">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-7">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-5">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-8">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-4">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-9">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-3">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-10">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-2">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-11">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-1">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-12">
+          <div class="item"></div>
+        </div>
+
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="column-xs-12">
+          <h2>Column Offsets Demo</h2>
+        </div>
+
+        <div class="column-xs-12">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-11 off-xs-1">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-10 off-xs-2">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-9 off-xs-3">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-8 off-xs-4">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-7 off-xs-5">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-6 off-xs-6">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-5 off-xs-7">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-4 off-xs-8">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-3 off-xs-9">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-2 off-xs-10">
+          <div class="item"></div>
+        </div>
+
+        <div class="column-xs-1 off-xs-11">
+          <div class="item"></div>
+        </div>
+
+      </div>
+
+      <hr>
 
 
-	<div id="main" class="column-xs-12 column-lg-9">
+      <div class="row">
 
-		<div class="row">
-			<div class="column-xs-12">
-				<h2>Features</h2>
-				<ul>
-					<li>Responsive, mobile first approach</li>
-					<li>Define specific colum size or use a flex column (a column that grows to fill space)</li>
-					<li>Define offset to push column a specific number of columns.</li>
-					<li>Set your own number of columns!</li>
-					<li>Set your own class names for rows, columns and offsets for nice library compatibilty!</li>
-				</ul>
-			</div>
-		</div>
+        <div class="column-xs-12">
+          <h2>Responsitivity By Combining Namespaces Demo</h2>
+          <p>Drag browser around to test responsive breakpoints.</p>
+        </div>
 
-		<hr>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+        <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
+          <div class="item"></div>
+        </div>
+      </div>
 
-		<div class="row">
-			<div class="column-xs-12">
-				<h2>Usage</h2>
-				<p>Just <code>@import</code> the <code>_flexgrid.scss</code> file as a partial or rename <code>_flexgrid.scss</code> -&gt; <code>flexgrid.scss</code> if you'd prefer it to be compiled independently. <a href="https://github.com/matthewsimo/scss-flex-grid/archive/master.zip">Download flex grid</a></p>
-				<p>Use the generated classes to build your layout. I prefer to keep my markup clean and <code>@extend</code> the grid classes onto my elements so I don't have to muck around in html for style edits but whatever floats your boat.</p>
-			</div>
-		</div>
+    </div>
+  </div>
 
-		<hr>
-
-		<div class="row">
-
-			<div class="column-xs-12">
-				<h2>Variables</h2>
-				<ul>
-					<li><code>$fg-columns</code>: The number of columns you wnat your grid to be, defaults to 12</li>
-					<li><code>$fg-gutter</code>: The gutter width used for each column, defaults to 0.5rem</li>
-					<li><code>$fg-breakpoints</code>: The Flex Grid breakpoint object, binds grid namespaces to media queries. Read more about namespaces in the next section. Defaults to <code>((xs),(sm,768),(md,992px),(lg,1200px))</code></li>
-					<li><code>$fg-class-row</code>: The class to use for rows, defaults to 'row'</li>
-					<li><code>$fg-class-col</code>: The class to use for columns, defaults to 'col'</li>
-					<li><code>$fg-class-off</code>: The class to use for offsets, defaults to 'off'</li>
-				</ul>
-			</div>
-		</div>
-
-		<hr>
-
-		<div class="row">
-
-			<div class="column-xs-12">
-				<h2>Class Reference</h2>
-				<ul>
-					<li><code>.($fg-class-row)</code>: Flex box container, use this to wrap columns.</li>
-					<li><code>.($fg-class-col)-(namespace)</code>: This creates a column that will grow/shrink depending on available space in the defined namespace.</li>
-					<li><code>.($fg-class-col)-(namespace)-(number)</code>: This creates a column that span the specific number of columns in the defined namespace. Valid numbers are 1-12.</li>
-					<li><code>.($fg-class-off)-(namespace)-(number)</code>: This will offset a column by a specific number of columns in the defined namespace. Valid numbers are 1-11.</li>
-				</ul>
-				<p>See docs about the row, col and offset class name variables, default is 'row', 'col', 'off'.</p>
-				<p>Default valid namespaces are <code>xs</code>, <code>sm</code>, <code>md</code>, <code>lg</code>. The <code>xs</code> namespace is default and uses no media queries. Learn how to <a href="#overriding-namespaces">override namespaces</a>.</p>
-			</div>
-		</div>
-
-		<hr>
-
-		<div class="row">
-
-			<div class="column-xs-12">
-				<h2>Columns Demo</h2>
-			</div>
-
-			<div class="column-xs-12">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-11">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-2">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-10">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-3">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-9">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-4">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-8">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-5">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-7">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-6">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-7">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-5">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-8">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-4">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-9">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-3">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-10">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-2">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-11">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-1">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-12">
-				<div class="item"></div>
-			</div>
-
-		</div>
-
-		<hr>
-
-		<div class="row">
-			<div class="column-xs-12">
-				<h2>Column Offsets Demo</h2>
-			</div>
-
-			<div class="column-xs-12">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-11 off-xs-1">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-10 off-xs-2">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-9 off-xs-3">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-8 off-xs-4">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-7 off-xs-5">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-6 off-xs-6">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-5 off-xs-7">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-4 off-xs-8">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-3 off-xs-9">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-2 off-xs-10">
-				<div class="item"></div>
-			</div>
-
-			<div class="column-xs-1 off-xs-11">
-				<div class="item"></div>
-			</div>
-
-		</div>
-
-		<hr>
-
-
-		<div class="row">
-
-			<div class="column-xs-12">
-				<h2>Responsitivity By Combining Namespaces Demo</h2>
-				<p>Drag browser around to test responsive breakpoints.</p>
-			</div>
-
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-			<div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
-				<div class="item"></div>
-			</div>
-		</div>
-
-
-
-
-	</div>
-
-
-    <footer>
-      <p>Copyright Burger.scss?</p>
-    </footer>
-  </body>
+  <footer>
+    <p>Copyright Burger.scss?</p>
+  </footer>
+</body>
 </html>
