--- a/index.html
+++ b/index.html
@@ -2,18 +2,37 @@
 <head>
   <title>burger.scss</title>
   <link rel="stylesheet" href="css/burger.css">
+  <link rel="stylesheet" href="css/font-awesome.css">
 </head>
 <body class="docs">
   <header>
     <img src="images/burger-sm.png" alt="">
     <nav>
       <ul class="list-inline list-reset">
-        <li>github</li>
+        <li><a target="_blank" href="https://github.com/m4tuna/burger">github</a></li>
+        <li><a href="/sassdoc/index.html">sassdocs</a></li>
       </ul>
     </nav>
   </header>
 
+  <div class="card">
+    <h2>about burger.scss</h2>
+    <p>A starter framework built using Flexbox and SCSS.</p>
+    <p>Used to create starter SCSS for:</p>
+    <ul class="list-reset list-inline">
+      <li><i class="fa fa-html5" aria-hidden="true"></i> HTML Boilerplate</li>
+      <li>Ionic</li>
+      <li>Reddit</li>
+      <li>Drupal 8 (In progress)</li>
+      <li>Wordpress (In progress)</li>
+    </ul>
+  </div>
+
+
   <div class="contain">
+    <div class="column-xs-12">
+      <h2></h2>
+    </div>
     <div class="column-xs-12">
 
       <div class="row">
