--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>A starter framework built using Flexbox and SCSS.</p>
     <p>Used to create starter SCSS for:</p>
     <ul class="list-reset list-inline">
-      <li><i class="fa fa-html5" aria-hidden="true"></i> HTML Boilerplate</li>
+      <li><i class="fa fa-html5"></i> HTML Boilerplate</li>
       <li>Ionic</li>
       <li>Reddit</li>
       <li>Drupal 8 (In progress)</li>
