--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="/sassdoc/index.html">sassdocs</a></li>
       </ul>
     </nav>
+    <p>SASS documentation is still in progress.</p>
   </header>
 
   <div class="card">
@@ -41,6 +42,28 @@
       <p>Run <span>gulp watch</span> to compile for local use. Enables source maps and browsersync autoreload.</p>
       <p>Run <span>gulp</span> to compile for production. Enables minification.</p>
       <p>Run <span>browser-sync start --server --files "css/*.css"</span> run local browsersync.</p>
+    </div>
+    <div class="column-xs-12">
+      <h2>SCSS</h2>
+      <p>All sassdocs are available here.</p>
+    </div>
+    <div class="column-xs-12">
+      <h3>Components</h3>
+    </div>
+    <div class="column-xs-12">
+      <h3>Elements</h3>
+    </div>
+    <div class="column-xs-12">
+      <h3>Layouts</h3>
+    </div>
+    <div class="column-xs-12">
+      <h3>Mixins</h3>
+    </div>
+    <div class="column-xs-12">
+      <h3>Modules</h3>
+    </div>
+    <div class="column-xs-12">
+      <h3>Vars</h3>
     </div>
     <div class="column-xs-12">
 
@@ -315,6 +338,23 @@
       </div>
 
     </div>
+
+    <div class="column-xs-12">
+      <h2>Libs</h2>
+      <ul class="list-reset">
+        <li><a href="">animate.scss</a></li>
+        <li><a href="">fontawesome</a></li>
+        <li><a href="">fontawesome</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="card">
+    <h2>philosophy</h2>
+    <p>I always find myself using different scss setups for various projects. Burger is a combo of module sets I've used; built on a base.</p>
+    <p>Burger is intended to be a quick start scss template; useful for rapid prototyping and building an initial base for your project. </p>
+    <p>Burger isn't seasoned yet (v0.9), feel free to contribute any new condiments or toppings.</p>
+    <h3 class="center">¯\_(ツ)_/¯</h3>
   </div>
 
   <footer>
