Links to libs, updated cards and docs site style.

--- a/index.html
+++ b/index.html
@@ -342,9 +342,8 @@
     <div class="column-xs-12">
       <h2>Libs</h2>
       <ul class="list-reset">
-        <li><a href="">animate.scss</a></li>
-        <li><a href="">fontawesome</a></li>
-        <li><a href="">fontawesome</a></li>
+        <li><a href="https://github.com/geoffgraham/animate.scss" target="_blank">animate.scss</a></li>
+        <li><a href="http://fontawesome.io" target="_blank">fontawesome</a></li>
       </ul>
     </div>
   </div>
