Fixing font awesome, updated mixins, fixing autoprefixer.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
   <link rel="icon" type="image/jpeg" href="/images/favicon.jpg">
   <link rel="icon" type="image/vnd.microsoft.icon" href="/images/favicon.ico">`</pre> -->
   <link rel="stylesheet" href="css/burger.css">
-  <link rel="stylesheet" href="css/font-awesome.css">
 </head>
 <body class="docs">
+  <div class="header">
+    <div class="left">
+      burger.scss
+    </div>
+    <div class="right">
+      <i class="fa fa-github"></i>
+    </div>
+  </div>
   <header>
     <img src="images/burger-xs.png" alt="">
     <nav>
@@ -27,9 +34,9 @@
     <ul class="list-reset list-inline">
       <li><i class="fa fa-html5"></i> HTML Boilerplate</li>
       <li>Ionic</li>
-      <li>Reddit</li>
-      <li>Drupal 8 (In progress)</li>
-      <li>Wordpress (In progress)</li>
+      <li><i class="fa fa-reddit"></i> Reddit</li>
+      <li><i class="fa fa-drupal"></i> Drupal 8 (In progress)</li>
+      <li><i class="fa fa-wordpress"></i> Wordpress (In progress)</li>
     </ul>
   </div>
 
