Boiler template, updated components, removed elems, unused dimensions partial.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <p>Used to create starter SCSS for:</p>
     <ul class="list-reset list-inline">
       <li><i class="fa fa-html5"></i> HTML Boilerplate</li>
+      <li><a href="/splash.html"><i class="fa fa-html5"></i> HTML Boilerplate</a></li>
       <li>Ionic</li>
       <li><i class="fa fa-reddit"></i> Reddit</li>
       <li><i class="fa fa-drupal"></i> Drupal 8 (In progress)</li>
