Alerts styles, makefile, updated index.

--- a/index.html
+++ b/index.html
@@ -53,13 +53,10 @@
     </div>
     <div class="column-xs-12">
       <h2>SCSS</h2>
-      <p>All sassdocs are available here.</p>
+      <p>All sassdocs are available <a href="/sassdocs/index.html">here</a>.</p>
     </div>
     <div class="column-xs-12">
       <h3>Components</h3>
-    </div>
-    <div class="column-xs-12">
-      <h3>Elements</h3>
     </div>
     <div class="column-xs-12">
       <h3>Layouts</h3>
