--- a/boiler.html
+++ b/boiler.html
@@ -1,10 +1,21 @@
-<html>
+<!doctype html>
+<html class="no-js" lang="">
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
   <title>burger.scss splash</title>
+
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
   <link rel="icon" type="image/png" href="/images/favicon.png">
-  <!-- <link rel="icon" type="image/gif" href="/images/favicon.gif">
+  <link rel="icon" type="image/gif" href="/images/favicon.gif">
   <link rel="icon" type="image/jpeg" href="/images/favicon.jpg">
-  <link rel="icon" type="image/vnd.microsoft.icon" href="/images/favicon.ico">`</pre> -->
+  <link rel="icon" type="image/vnd.microsoft.icon" href="/images/favicon.ico">`</pre>
   <link rel="stylesheet" href="css/burger.css">
 </head>
 <body>
@@ -53,5 +64,16 @@
     <p>&copy; 2016 Mike Fortuna</p>
     <p><a href="https://opensource.org/licenses/MIT">MIT License</a></p>
   </footer>
-</body>
-</html>
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <script>
+  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+    e.src='https://www.google-analytics.com/analytics.js';
+    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+    </script>
+  </body>
+  </html>
