--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
-<html>
+<!doctype html>
+<html class="no-js" lang="">
 <head>
-  <title>burger.scss</title>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+  <title>burger.scss splash</title>
+
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
   <link rel="icon" type="image/png" href="/images/favicon.png">
-  <!-- <link rel="icon" type="image/gif" href="/images/favicon.gif">
+  <link rel="icon" type="image/gif" href="/images/favicon.gif">
   <link rel="icon" type="image/jpeg" href="/images/favicon.jpg">
-  <link rel="icon" type="image/vnd.microsoft.icon" href="/images/favicon.ico">`</pre> -->
+  <link rel="icon" type="image/vnd.microsoft.icon" href="/images/favicon.ico">`</pre>
   <link rel="stylesheet" href="css/burger.css">
 </head>
 <body class="docs">
