--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2>buttons</h2>
       </div>
       <div class="column-xs-2">
-        <a href="#" class="button red">Solid</a>
+        <a href="#" class="button primary">Solid</a>
       </div>
       <div class="column-xs-2">
         <a href="#" class="button blue">Solid</a>
@@ -92,7 +92,7 @@
         <a href="#" class="button pink">Solid</a>
       </div>
       <div class="column-xs-2">
-        <a href="#" class="button green">Solid</a>
+        <a href="#" class="button grey">Solid</a>
       </div>
       <div class="column-xs-2">
         <a href="#" class="button black">Solid</a>
@@ -101,19 +101,19 @@
 
     <div class="row">
       <div class="column-xs-2">
-        <a href="#" class="button hollow red">Hollow</a>
+        <a href="#" class="button hollow green">Hollow</a>
       </div>
       <div class="column-xs-2">
-        <a href="#" class="button hollow blue">Hollow</a>
+        <a href="#" class="button hollow brown">Hollow</a>
       </div>
       <div class="column-xs-2">
-        <a href="#" class="button hollow orange">Hollow</a>
+        <a href="#" class="button hollow tertiary">Hollow</a>
       </div>
       <div class="column-xs-2">
         <a href="#" class="button hollow yellow">Hollow</a>
       </div>
       <div class="column-xs-2">
-        <a href="#" class="button hollow green">Hollow</a>
+        <a href="#" class="button hollow primary">Hollow</a>
       </div>
       <div class="column-xs-2">
         <a href="#" class="button hollow purple">Hollow</a>
@@ -121,10 +121,13 @@
     </div>
 
     <div class="row">
-      <div class="column-xs-6">
-        <a href="" class="button lime icon-left"><i class="fa fa-star"></i>Icon Left</a>
+      <div class="column-xs-4">
+        <a href="" class="button blue icon-left"><i class="fa fa-star"></i>Icon Left</a>
       </div>
-      <div class="column-xs-6">
+      <div class="column-xs-4">
+        <a href="" class="button orange hollow icon-left"><i class="fa fa-star"></i>Hollow with Icon</a>
+      </div>
+      <div class="column-xs-4">
         <a href="" class="button primary icon-right">Icon Right <i class="fa fa-star"></i></a>
       </div>
     </div>
@@ -134,7 +137,7 @@
         <a href="" class="button red pill">Pill</a>
       </div>
       <div class="column-xs-6">
-        <a href="" class="button blue pill">Pill</a>
+        <a href="" class="button navy pill">Pill</a>
       </div>
     </div>
 
@@ -163,7 +166,7 @@
           </div>
           <div class="right">
             <img src="images/stock.jpg" alt="">
-            <a class="button white hollow" href="#">My Snowstats <i class="fa fa-chevron-right"></i></a>
+            <a class="button white hollow icon-right" href="#">My Snowstats <i class="fa fa-chevron-right"></i></a>
           </div>
         </div>
       </div>
