--- a/index.html
+++ b/index.html
@@ -520,5 +520,6 @@ menuButton.addEventListener('click', function (e) {
   e.preventDefault();
 });
 </script>
+<script src="https://use.fontawesome.com/4054a4e094.js"></script>
 </body>
 </html>
