Updated docs page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="/css/burger.css">
 </head>
 <body class="burger-docs">
-  <div class="header">
+  <div class="header hide">
     <div class="left">
       burger.scss
     </div>
