Alerts, separated docs.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
 
     <hr>
 
+    <div class="row">
+      <div class="column-xs-12">
+        <h2>alerts</h2>
+        <div class="alert red">
+          <h3><i class="fa fa-warning"></i> holy shit!</h3>
+          <p>This is the message here.</p>
+          <a href="#" class="close">X</a>
+        </div>
+        <div class="alert green">
+          <h3><i class="fa fa-check"></i> all good</h3>
+          <p>This is the message here.</p>
+          <a href="#" class="close">X</a>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
 
     <div class="row">
       <div class="column-xs-12">
