Off canvas navigation menu component

--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
     <div class="column-xs-12">
       <h2>Setup</h2>
       <p>Clone from git. Run <span>npm install</span> to install local packages.</p>
-      <p>Run <span>gulp watch</span> to compile for local use. Enables source maps and browsersync autoreload.</p>
-      <p>Run <span>gulp</span> to compile for production. Enables minification.</p>
-      <p>Run <span>browser-sync start --server --files "css/*.css"</span> run local browsersync.</p>
+      <p>Run <span>npm start</span> to compile for local use. Enables source maps and runs browsersync.</p>
+      <p>Run <span>gulp</span> to compile for production. Enables minification. No source maps / server.</p>
     </div>
 
     <hr>
@@ -229,6 +228,19 @@
                 <a href="#" class="button red hollow">Deny <i class="fa fa-times"></i></a>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
+      <h2>Progress bar</h2>
+      <div class="column-xs-12">
+        <div class="progress-20">
+          <div class="progressBar">
+            <div></div>
           </div>
         </div>
       </div>
