--- a/index.html
+++ b/index.html
@@ -249,6 +249,20 @@
     <hr>
 
     <div class="row">
+      <div class="column-xs-12">
+        <h2>Switch</h2>
+      </div>
+      <div class="column-xs-12">
+        <label class="switch">
+          <input type="checkbox">
+          <div class="slider round"></div>
+        </label>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
 
       <div class="column-xs-12">
         <h2>Grid</h2>
