Moving component color config to colors.scss

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
     <div class="row">
       <div class="column-xs-12">
         <h2>alerts</h2>
-        <div class="alert red">
+        <div class="alert error">
           <h3><i class="fa fa-warning"></i> holy shit!</h3>
           <p>This is the message here.</p>
           <a href="#" class="close">X</a>
         </div>
-        <div class="alert green">
+        <div class="alert success">
           <h3><i class="fa fa-check"></i> all good</h3>
           <p>This is the message here.</p>
           <a href="#" class="close">X</a>
