--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   <link rel="stylesheet" href="/css/burger.css">
 </head>
 <body class="burger-docs">
+  <div class="overlay"></div>
   <div class="loading-bar hide"></div>
+  <div class="content">
+
   <div class="header hide">
     <div class="left">
       burger.scss
@@ -79,17 +82,6 @@
 
     <hr>
 
-
-    <div class="row">
-      <div class="column-xs-12">
-        <h2>burger menu</h2>
-        <a href="#" class="menu-button" id="menuButton">
-          <span class="burger-icon"></span>
-        </a>
-      </div>
-    </div>
-
-    <hr>
 
     <div class="row">
       <div class="column-xs-12">
@@ -239,16 +231,26 @@
     <hr>
 
     <div class="row">
-      <div class="column-xs-12">
-        <h2>Loading</h2>
+      <div class="column-xs-6">
+        <h2>burger</h2>
+        <a href="#" class="menu-button" id="menuButton">
+          <span class="burger-icon"></span>
+        </a>
       </div>
-      <div class="column-xs-12">
-        <label class="switch">
-          <input type="checkbox" id="loading">
-          <div class="slider round"></div>
-        </label>
+
+      <div class="column-xs-6">
+        <div class="column-xs-12">
+          <h2>Loading</h2>
+          <label class="switch">
+            <input type="checkbox" id="loading">
+            <div class="slider round"></div>
+          </label>
+        </div>
       </div>
     </div>
+
+
+
 
     <hr>
 
@@ -266,34 +268,39 @@
     <hr>
 
     <div class="row">
-      <div class="column-xs-12">
+      <div class="column-xs-6">
         <h2>Tabs</h2>
-      </div>
-      <div class="column-xs-12">
         <div class="tabs ">
           <a href="#" title="Tab 1" class="tab">Tab 1</a>
           <a href="#" title="Tab 2" class="tab active">Tab 2</a>
           <a href="#" title="Tab 3" class="tab">Tab 3</a>
         </div>
       </div>
+      <div class="column-xs-6">
+        <div class="column-xs-12">
+          <h2>Tags</h2>
+          <ul class="tags list-inline">
+            <li>
+              <a href="#" class="tag blue"> rock</a>
+            </li>
+            <li>
+              <a href="#" class="tag orange"> hip hop </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
+
+
+
+    <hr>
 
     <div class="row">
       <div class="column-xs-12">
-        <h2>Tags</h2>
+        <h2>Modal</h2>
       </div>
-      <div class="column-xs-12">
-        <ul class="tags">
-          <li>
-            <a href="#" class="tag blue"> fantasy</a>
-          </li>
-          <li>
-            <a href="#" class="tag green"> fiction </a>
-          </li>
-          <li>
-            <a href="#" class="tag orange"> contemporary </a>
-          </li>
-        </ul>
+      <div class="column-xs-3">
+        <a href="#" id="openModal" class="button blue">Open Modal</a>
       </div>
     </div>
 
@@ -457,7 +464,6 @@
 
       <div class="column-xs-12">
         <h2>Combining Namespaces</h2>
-        <p>Drag browser around to test responsive breakpoints.</p>
       </div>
 
       <div class="column-xs-6 column-sm-4 column-md-3 column-lg-1">
@@ -582,12 +588,24 @@
     </div>
   </div> <!-- end contain -->
 
+</div> <!-- end content -->
+
 <div class="card full-width">
   <h2>philosophy</h2>
   <p>I always find myself using different scss setups for various projects. Burger is a combo of module sets I've used; built on a base.</p>
   <p>Burger is intended to be a quick start scss template; useful for rapid prototyping and building an initial base for your project. </p>
   <p>Burger isn't seasoned yet (v0.9), feel free to contribute any new condiments or toppings.</p>
   <h3 class="center">¯\_(ツ)_/¯</h3>
+</div>
+
+<div class="modal">
+  <div class="column-xs-12">
+    <h3>This is modal.</h3>
+    <p>You can has modal.</p>
+  </div>
+  <div class="column-xs-12">
+    <a href="#" id="closeModal" class="button pill red">close</a>
+  </div>
 </div>
 
 <footer>
