--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <div class="row">
       <div class="column-xs-6">
-        <a href="" class="button red pill">Pill</a>
+        <a href="" class="button orange pill">Pill</a>
       </div>
       <div class="column-xs-6">
         <a href="" class="button navy pill">Pill</a>
@@ -199,7 +199,7 @@
                 <a href="#" class="button green hollow">Accept <i class="fa fa-check"></i></a>
               </div>
               <div class="column-xs-6">
-                <a href="#" class="button red hollow">Deny <i class="fa fa-times"></i></a>
+                <a href="#" class="button orange hollow">Deny <i class="fa fa-times"></i></a>
               </div>
             </div>
           </div>
@@ -220,7 +220,7 @@
                 <a href="#" class="button green hollow">Accept <i class="fa fa-check"></i></a>
               </div>
               <div class="column-xs-6">
-                <a href="#" class="button red hollow">Deny <i class="fa fa-times"></i></a>
+                <a href="#" class="button orange hollow">Deny <i class="fa fa-times"></i></a>
               </div>
             </div>
           </div>
